Fix content overflow

--- a/src/pages/list/index.styl
+++ b/src/pages/list/index.styl
@@ -38,7 +38,8 @@
       font-weight lighter
       display -webkit-box
       -webkit-line-clamp 3
-      -webkit-box-orient vertical  
+      -webkit-box-orient vertical
+      overflow hidden
 
 @media screen and (max-width: 641px)
   .col .item
